# WeedBot

./: .gitmodules  README.md
weedbot_bringup/: CMakeLists.txt  package.xml
weedbot_bringup/launch/: arm.launch  die_weeds.launch  imu.launch  vision.launch
weedbot_bringup/scripts/: can.sh  move.py
weedbot_control/: CMakeLists.txt  package.xml
weedbot_control/launch/: weedbot_control.launch
weedbot_control/scripts/: arm_controller.py  motion_watcher.py  weed_coordinator.py  weed_poser.py
weedbot_description/: CMakeLists.txt  package.xml
weedbot_description/meshes/: RosebudBottom.stl  RosebudMount.blend  RosebudTop.stl  WeedbotValveStick.blend  WeedbotValveStick.stl  rosebud.dae
weedbot_detect/: CMakeLists.txt  detect_ros.py  package.xml
weedbot_detect/launch/: detect.launch
weedbot_detect/msg/: detection.msg
weedbot_detect/scripts/: detect_ros.py  resize.py
weedbot_msgs/: CMakeLists.txt  package.xml
weedbot_msgs/msg/: Detection.msg  Object.msg
weedbot_msgs/srv/: Localize.srv  NamedArmCommand.srv  PoseListArmCommand.srv
