<?xml version="1.0"?>
<package format="2">
  <name>weedbot_bringup</name>
  <version>0.0.0</version>
  <description>The weedbot_bringup package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
