<?xml version="1.0"?>
<package format="2">
  <name>weedbot_control</name>
  <version>0.0.0</version>
  <description>The weedbot_control package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>weedbot_msgs</exec_depend>

</package>
