<?xml version="1.0"?>
<package format="2">
  <name>weedbot_detect</name>
  <version>0.0.0</version>
  <description>The weedbot_detect package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
