<?xml version="1.0"?>
<package format="2">
  <name>weedbot_msgs</name>
  <version>0.0.0</version>
  <description>The weedbot_msgs package</description>

  <maintainer email="davesarmoury@gmail.co">Dave Niewinski</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
